Add doctor sign up buttons

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewTitle"
         android:layout_marginTop="16dp"
-        android:hint="Enter your phone number"/>
+        android:hint="Enter your email"/>
 
     <Button
         android:id="@+id/buttonSendCode"
