--- a/app/src/main/res/layout/activity_doctors_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_doctors_sign_up_page.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+<LinearLayout
+    android:id="@+id/parentLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -143,27 +148,92 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
+
+        <Button
+            android:id="@+id/attachPhotoBtn"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Add Passport Photo" />
+
+        <!-- Add an ImageView for the small photo -->
+        <ImageView
+            android:id="@+id/smallPhotoImageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:visibility="gone"/>
+
+    </LinearLayout>
+    <!-- Button 1 for attaching photo -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
+
+        <Button
+            android:id="@+id/attachPhotoBtn1"
+            android:layout_width="138dp"
+            android:layout_height="wrap_content"
+            android:text="add a medical diploma" />
+
+        <ImageView
+            android:id="@+id/smallPhotoImageView1"
+            android:layout_width="74dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:scaleType="fitCenter" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
+
+        <Button
+            android:id="@+id/attachPhotoBtn2"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Job Activity Photo" />
+
+        <!-- ImageView for the small photo 2 -->
+        <ImageView
+            android:id="@+id/smallPhotoImageView2"
+            android:layout_width="74dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:scaleType="fitCenter"/>
+
+    </LinearLayout>
+
+
+
     <Button
         android:id="@+id/signUpBtn"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:padding="3dp"
-        android:text="@string/signUp"
-        android:textSize="17sp"
-        android:textStyle="bold" />
+        android:text="Sign Up"/>
 
     <TextView
         android:id="@+id/already_user"
         android:layout_width="wrap_content"
-        android:layout_height="81dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="16dp"
         android:autoLink="web"
         android:gravity="center"
         android:padding="10dp"
-        android:text="@string/already_user"
+        android:text="Already a user? Login here"
         android:textColorLink="@android:color/holo_blue_dark"
-        android:textSize="15sp" />
+        android:textSize="15sp"/>
 
 </LinearLayout>
+</ScrollView>
