add log out button

--- a/app/src/main/res/layout/fragment_doctor_profil.xml
+++ b/app/src/main/res/layout/fragment_doctor_profil.xml
@@ -97,7 +97,13 @@
                 android:layout_below="@id/textPhoneLabel"
                 android:layout_marginTop="8dp"
                 android:text="+1234567890"/>
-
+            <Button
+                android:id="@+id/logOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textPhone"
+                android:layout_marginTop="16dp"
+                android:text="Log out" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
