--- a/app/src/main/res/layout/fragment_patients_profile.xml
+++ b/app/src/main/res/layout/fragment_patients_profile.xml
@@ -69,7 +69,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="223dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:padding="16dp">
 
@@ -122,73 +122,16 @@
                 android:layout_marginTop="8dp"
                 android:text="+1234567890" />
 
+            <Button
+                android:id="@+id/logOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textPhone"
+                android:layout_marginTop="16dp"
+                android:text="Log out" />
+
 
         </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        android:layout_marginTop="430dp"
-        app:cardUseCompatPadding="true">
-
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="99dp"
-                android:layout_gravity="top|start">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginBottom="17dp"
-                    android:src="@drawable/user"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/fullNameTextView"
-                    android:layout_width="98dp"
-                    android:layout_height="21dp"
-                    android:layout_marginStart="300dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="when"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                     />
-
-                <TextView
-                    android:id="@+id/fullNameTextView2"
-                    android:layout_width="77dp"
-                    android:layout_height="36dp"
-                    android:layout_marginStart="10dp"
-                    android:text="Doctor Full Name"
-                    android:textSize="16dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-                <TextView
-                    android:id="@+id/fullNameTextView3"
-                    android:layout_width="99dp"
-                    android:layout_height="24dp"
-                    android:layout_marginTop="60dp"
-                    android:layout_marginEnd="150dp"
-                    android:text="reason"
-                    android:textSize="16dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/fullNameTextView2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </androidx.cardview.widget.CardView>
 
 </FrameLayout>
