added email verification to sign up

--- a/app/src/main/res/layout/activity_password_verification.xml
+++ b/app/src/main/res/layout/activity_password_verification.xml
@@ -34,7 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewTitle"
         android:layout_marginTop="16dp"
-        android:hint="Enter the six-digit code"/>
+        android:hint="Enter the six-digit code"
+        android:inputType="number"
+        android:maxLength="6"/>
 
     <Button
         android:id="@+id/buttonVerifyCode"
