--- a/app/src/main/res/layout/fragment_children_patient_registration.xml
+++ b/app/src/main/res/layout/fragment_children_patient_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddVisit">
+    tools:context=".ChildrenPatientRegistration">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -22,36 +22,25 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
-            android:text="Add Visit"
+            android:text="Add Child"
             android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".AddVisit">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/addEventButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:onClick="showDateTimePicker"
-            android:text="+" />
+    <Button
+        android:id="@+id/addChild"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:onClick="showDateTimePicker"
+        android:text="Add Child" />
 
-        <TextView
-            android:id="@+id/selectedDateTimeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/addEventButton"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:text=""
-            android:textSize="16sp" />
 
     </RelativeLayout>
 
