--- a/app/src/main/res/layout/dialog_add_child.xml
+++ b/app/src/main/res/layout/dialog_add_child.xml
@@ -15,19 +15,28 @@
         android:id="@+id/editTextLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Location" />
+        android:hint="Your Home Location" />
+
+    <EditText
+        android:id="@+id/editTextLocation2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Clinic Location" />
 
     <EditText
         android:id="@+id/editTextDOB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Date of Birth"
-        android:focusable="false"/>
+        android:focusable="false"
+        android:clickable="true"
+        android:cursorVisible="false" />
 
-    <ImageView
-        android:id="@+id/imageViewBirthCertificate"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/editTextBirthCertDetails"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_gallery" />
+        android:hint="Birth Certificate Details"
+        android:inputType="text" />
 
 </LinearLayout>
