--- a/app/src/main/res/layout/fragment_patients_profile.xml
+++ b/app/src/main/res/layout/fragment_patients_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Profile">
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -70,7 +71,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:padding="16dp">
 
             <TextView
@@ -122,14 +122,31 @@
                 android:layout_marginTop="8dp"
                 android:text="+1234567890" />
 
-            <Button
-                android:id="@+id/logOut"
+            <!-- New TextViews for Doctor -->
+            <TextView
+                android:id="@+id/textDoctorLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textPhone"
                 android:layout_marginTop="16dp"
-                android:text="Log out" />
+                android:text="Doctor:"
+                android:textStyle="bold"/>
 
+            <TextView
+                android:id="@+id/textDoctorName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textDoctorLabel"
+                android:layout_marginTop="8dp"
+                android:text="Dr. Smith"/>
+
+            <Button
+                android:id="@+id/logOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textDoctorName"
+                android:layout_marginTop="16dp"
+                android:text="Log out" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
