--- a/app/src/main/res/layout/dialog_add_child.xml
+++ b/app/src/main/res/layout/dialog_add_child.xml
@@ -15,13 +15,13 @@
         android:id="@+id/editTextLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Your Home Location" />
+        android:hint="Your Address" />
 
     <EditText
         android:id="@+id/editTextLocation2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Clinic Location" />
+        android:hint="Clinic" />
 
     <EditText
         android:id="@+id/editTextDOB"
