--- a/app/src/main/res/layout/activity_doctors_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_doctors_sign_up_page.xml
@@ -77,7 +77,7 @@
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
-        android:hint="@string/location"
+        android:hint="Address"
         android:inputType="textCapWords"
         android:padding="10dp"
         android:singleLine="true"
