--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".ForgotPassword">
+    tools:context=".forgot_password_classes.ForgotPassword">
 
     <ImageView
         android:id="@+id/imageView"
