--- a/app/src/main/res/layout/fragment_children_patient_registration.xml
+++ b/app/src/main/res/layout/fragment_children_patient_registration.xml
@@ -5,7 +5,7 @@
     android:id="@+id/patient_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChildrenPatientRegistration">
+    tools:context=".patients_classes.fragments.ChildrenPatientRegistration">
 
 
     <LinearLayout
