--- a/app/src/main/res/layout/fragment_doctors_questionnaire.xml
+++ b/app/src/main/res/layout/fragment_doctors_questionnaire.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DoctorQuestionnaire"
+    tools:context=".doctors_classes.fragments.DoctorQuestionnaire"
     >
 
     <LinearLayout
