--- a/app/src/main/res/layout/fragment_today_patients.xml
+++ b/app/src/main/res/layout/fragment_today_patients.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TodayPatients">
+    tools:context=".doctors_classes.fragments.TodayPatients">
 
     <LinearLayout
         android:id="@+id/linearLayout"
