--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -31,10 +31,11 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/editTextPhoneNumber"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewTitle"
+        android:inputType="textEmailAddress"
         android:layout_marginTop="16dp"
         android:hint="Enter your email"/>
 
@@ -42,9 +43,9 @@
         android:id="@+id/buttonSendCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextPhoneNumber"
+        android:layout_below="@id/email"
         android:layout_marginTop="16dp"
-        android:text="Send Code"/>
+        android:text="Done"/>
 
 
 
