--- a/app/src/main/res/layout/dialog_add_child.xml
+++ b/app/src/main/res/layout/dialog_add_child.xml
@@ -17,11 +17,7 @@
         android:layout_height="wrap_content"
         android:hint="Your Address" />
 
-    <EditText
-        android:id="@+id/editTextLocation2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Clinic" />
+
 
     <EditText
         android:id="@+id/editTextDOB"
@@ -38,5 +34,21 @@
         android:layout_height="wrap_content"
         android:hint="Birth Certificate Details"
         android:inputType="text" />
+    <Spinner
+        android:id="@+id/regions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:id="@+id/cities"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:id="@+id/clinics"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <Spinner
+        android:id="@+id/doctors"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
