add child photo

--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -21,6 +21,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageViewChild"
                 android:layout_width="237dp"
                 android:layout_height="51dp"
                 android:layout_centerHorizontal="true"
