--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
@@ -150,6 +151,23 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonAddTimes"
+        android:layout_width="57dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        android:text="+" />
+    <LinearLayout
+        android:id="@+id/times_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <!-- This container will hold dynamically added TextViews -->
+    </LinearLayout>
+
+
     <Spinner
         android:id="@+id/regions"
         android:layout_width="match_parent"
