--- a/app/src/main/res/layout/activity_doctors_home_page.xml
+++ b/app/src/main/res/layout/activity_doctors_home_page.xml
@@ -22,7 +22,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/todayPatients"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="80dp"
             android:clickable="true"
@@ -30,7 +30,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/messages"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="80dp"
             android:clickable="true"
@@ -38,7 +38,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/profile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
             app:srcCompat="@drawable/user" />
