--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -36,7 +36,6 @@
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
         android:background="?android:attr/selectableItemBackground"
         android:text="Login"
         android:textColor="@color/black"
@@ -54,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:hint="Password"
+        android:textColorHint="@color/black"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="169dp"
         android:hint="Email"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,14 +77,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
         android:layout_marginBottom="300dp"
         android:autoLink="web"
         android:gravity="center"
         android:padding="10dp"
         android:text="@string/create_account"
         android:textColorLink="@android:color/holo_blue_dark"
-        android:textSize="15sp"
+        android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
