--- a/app/src/main/res/layout/activity_patients_home_page.xml
+++ b/app/src/main/res/layout/activity_patients_home_page.xml
@@ -22,7 +22,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/todayPatients"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:clickable="true"
@@ -30,7 +30,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/messages"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:clickable="true"
@@ -39,7 +39,7 @@
         <!-- Новая кнопка добавлена здесь -->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/questionnaireButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:clickable="true"
@@ -47,7 +47,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/profile"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
             app:srcCompat="@drawable/user" />
