--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -4,132 +4,139 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView"
     android:layout_width="fill_parent"
+    android:background="@drawable/sign_up_back"
     android:layout_height="fill_parent">
 <LinearLayout
     android:id="@+id/parentLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/sign_up_back"
+
     android:padding="90dp">
 
     <EditText
         android:id="@+id/fullName"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
         android:hint="@string/fullName"
+        android:textColorHint="@color/black"
         android:inputType="textCapWords"
         android:padding="10dp"
         android:singleLine="true"
-        android:textSize="16sp" />
+        android:textSize="16dp" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/white_greyish" />
 
     <EditText
         android:id="@+id/userEmailId"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
         android:hint="@string/email"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:singleLine="true"
-        android:textSize="16sp" />
+        android:textSize="16dp" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/white_greyish" />
 
     <EditText
         android:id="@+id/mobileNumber"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
         android:hint="@string/mobileNumber"
+        android:textColorHint="@color/black"
         android:inputType="phone"
         android:padding="10dp"
         android:singleLine="true"
-        android:textSize="16sp" />
+        android:textSize="16dp" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/white_greyish" />
 
     <EditText
         android:id="@+id/location"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
         android:hint="Address"
+        android:textColorHint="@color/black"
         android:inputType="textCapWords"
         android:padding="10dp"
         android:singleLine="true"
-        android:textSize="16sp" />
+        android:textSize="16dp" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/white_greyish" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
         android:hint="@string/passowrd"
+        android:textColorHint="@color/black"
         android:inputType="textPassword"
         android:padding="10dp"
         android:singleLine="true"
         android:textSize="16sp" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/white_greyish" />
 
     <EditText
         android:id="@+id/confirmPassword"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:gravity="center_vertical"
         android:hint="@string/confirmPassword"
+        android:textColorHint="@color/black"
         android:inputType="textPassword"
         android:padding="10dp"
         android:singleLine="true"
-        android:textSize="16sp" />
+        android:textSize="16dp" />
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/white_greyish" />
 
     <!-- "Login As" text label and Spinner -->
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="5dp">
@@ -138,7 +145,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="As"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:paddingRight="10dp"
             android:layout_gravity="center_vertical"/>
 
@@ -271,7 +278,7 @@
         android:padding="10dp"
         android:text="Already a user? Login here"
         android:textColorLink="@android:color/holo_blue_dark"
-        android:textSize="15sp"/>
+        android:textSize="15dp"/>
 
 </LinearLayout>
 </ScrollView>
