--- a/app/src/main/res/layout/fragment_patient_data.xml
+++ b/app/src/main/res/layout/fragment_patient_data.xml
@@ -171,6 +171,17 @@
                 android:layout_below="@id/textMobileNumberLabel"
                 android:layout_marginTop="8dp"
                 android:text="Mobile Number"/>
+            <TextView
+                android:id="@+id/patientQuestionnaire"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/mobileNumber"
+                android:layout_marginTop="8dp"
+                android:autoLink="web"
+                android:linksClickable="true"
+                android:textColor="@android:color/holo_blue_dark"
+                android:text="See Child Questionnaire" />
+
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
